--- a/Predict/templates/Predict/base.html
+++ b/Predict/templates/Predict/base.html
@@ -1,81 +1,148 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>{% block title %}Default Title{% endblock %}</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.18.0/font/bootstrap-icons.css" rel="stylesheet">
 
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Bootstrap demo</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-      crossorigin="anonymous"
-    />
-  </head>
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">Predict</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                Make Prediction on
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Car</a></li>
-                <li><a class="dropdown-item" href="#">Dog</a></li>
-                <li><a class="dropdown-item" href="#">CIFAR-10</a></li>
-                <li>
-                  <hr class="dropdown-divider" />
-                </li>
-                <li><a class="dropdown-item" href="#">Support</a></li>
-                <li><a class="dropdown-item" href="#">Write to Us</a></li>
-              </ul>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Contact us</a>
-            </li>
-          </ul>
-          <form class="d-flex" role="search">
-            <input
-              class="form-control me-2"
-              type="search"
-              placeholder="Search"
-              aria-label="Search"
-            />
-            <button class="btn btn-outline-success" type="submit">
-              Search
-            </button>
-          </form>
-        </div>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.19.0/font/bootstrap-icons.css">
+  <style>
+    body {
+      background-color: rgb(44, 44, 44);
+      /* Set the background color to black */
+      box-shadow: 5px 5px 10px 5px rgba(0, 0, 0, 0.5);
+      margin: 15px;
+    }
+
+    .card-img-top {
+      object-fit: cover;
+      height: 200px;
+    }
+
+    .card-title {
+      font-size: 1.5rem;
+    }
+
+    .card-description {
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+    }
+
+    .custom-shadow {
+      box-shadow: 5px 5px 10px 5px rgba(0, 0, 0, 0.5);
+      /* Adjust values as needed */
+    }
+
+    .custom-shadow-footer {
+      box-shadow: -4px -4px 10px 5px rgba(0, 0, 0, 0.5);
+      /* Adjust values as needed */
+    }
+
+    /* Custom styling for the navbar */
+    .navbar {
+      box-shadow: 5px 5px 10px 3px rgba(0, 0, 0, 0.5);
+    }
+
+    .text-glow {
+      text-shadow: 0 0 5px rgba(255, 255, 255, 0.8), 0 0 10px rgba(255, 255, 255, 0.8), 0 0 15px rgba(255, 255, 255, 0.8);
+      /* Adjust the color and shadow values as needed */
+    }
+
+    .navbar-nav .nav-link {
+      color: #ffffff;
+      /* Adjust the color as needed */
+    }
+
+    .navbar-toggler-icon {
+      background-color: #0080ff;
+      /* Adjust the color as needed */
+    }
+
+    .container-with-margin {
+      margin-top: 80px;
+      margin-bottom: 30px;
+    }
+
+    .center-align {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      /* This ensures it's centered vertically too */
+    }
+
+    .orange-btn {
+      background-color: #fc852f;
+      color: white;
+    }
+
+    .orange-btn:hover {
+      background-color: #f97316;
+      color: white;
+    }
+  </style>
+</head>
+<body>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <div class="container-fluid">
+      <a class="navbar-brand text-glow" href="/home">Haris Ansar Khan</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link text-glow" href="https://github.com/TheAIExplorer" target="_blank"
+              rel="noopener noreferrer">GitHub</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-glow" href="https://linkedin.com/in/harisansarkhan" target="_blank"
+              rel="noopener noreferrer">LinkedIn</a>
+          </li>
+          <li class="nav-item text-glow">
+            <a class="nav-link" href="https://gmail.com/" target="_blank" rel="noopener noreferrer">Email me</a>
+          </li>
+        </ul>
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+          <li class="nav-item text-glow">
+            <a class="nav-link" href="tel:+91-9793300967">
+              <i class="bi bi-telephone-fill"></i> Call: 9793300967
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-glow" href="../static/Predict/resume.pdf" target="_blank"
+              rel="noopener noreferrer">Download
+              Resume</a>
+          </li>
+        </ul>
       </div>
-    </nav>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+    </div>
+  </nav>
+
+  <div class="container text-center mt-10 container-with-margin">
+    {% block content %}{% endblock %}
+  </div>
+
+  <footer class="custom-shadow-footer bg-dark text-light text-center p-2 footer">
+    <div class="container-fluid">
+      <p class="footer-text text-glow">&copy; 2024 harisansarkhan.ai. All rights reserved.</p>
+      <div class="social-icons mt-4">
+        <a href="https://github.com/TheAIExplorer" target="_blank" rel="noopener noreferrer" class="social-icon">
+          <i class="bi bi-github"></i>
+        </a>
+        <a href="https://linkedin.com/in/harisansarkhan" target="_blank" rel="noopener noreferrer" class="social-icon">
+          <i class="bi bi-linkedin"></i>
+        </a>
+      </div>
+    </div>
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
+</body>
 </html>
