--- a/Predict/templates/Predict/predict_car_brand.html
+++ b/Predict/templates/Predict/predict_car_brand.html
@@ -1,51 +1,24 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Car</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
-</head>
-<body>
+{% extends 'Predict/base.html' %}
 
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="/home">Haris Ansar Khan</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="https://github.com/TheAIExplorer" target="_blank">GitHub</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="https://linkedin.com/in/harisansarkhan" target="_blank">LinkedIn</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="https://gmail.com/" target="_blank">Email me</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-  <h1>Predict Car Brand</h1>
+{% block title %}Car{% endblock %}
+
+{% block content %}
+{% load static %}
+<div class="container-fluid text-light text-center mt-5">
+  <img src="{% static 'Predict/car.jpg' %}" alt="Car Image" class="img-fluid rounded-square mb-3"
+    style="max-width: 350px; max-height: 350px; border: 1px solid #ffffff">
+  <h1 class="mb-4 text-glow">Predict Car Brand</h1>
   <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
-    <label for="image">Upload Image:</label>
-    <input type="file" name="image" accept="image/*" required />
-    <br />
-    <button type="submit" class="btn btn-outline-primary">Predict</button>
-    <!-- <div class="input-group">
-        <input type="file" class="form-control" id="inputGroupFile04" aria-describedby="inputGroupFileAddon04" aria-label="Upload">
-        <button class="btn btn-outline-secondary" type="button" id="inputGroupFileAddon04">Button</button>
-    </div> -->
+    <div class="row justify-content-center">
+      <div class="col-md-3">
+        <div class="mb-3">
+          <label for="image" class="form-label text-glow">Upload Image:</label>
+          <input type="file" name="image" accept="image/*" class="form-control" required />
+        </div>
+      </div>
+    </div>
+    <button type="submit" class="btn orange-btn">Predict</button>
   </form>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-    crossorigin="anonymous"></script>
-</body>
-</html>
+</div>
+{% endblock %}
